# wildpharma

./: .gitignore  LICENSE  README.md  pyproject.toml
core/: api.py  settings.py
customers/: admin.py  api.py  models.py  schemas.py  services.py
customers/migrations/: 0001_initial.py  0002_alter_customer_deleted_at.py  0003_alter_customer_deleted_at.py  0004_alter_customer_deleted_at.py  0005_alter_customer_deleted_at.py
